QMOLEDEV/i3-4.1/src/cmdparse.output
Grammar

    0 $accept: commands $end

    1 commands: commands ';' command
    2         | command

    3 command: match operations

    4 match: /* empty */
    5      | matchstart criteria matchend

    6 matchstart: '['

    7 matchend: ']'

    8 criteria: criteria criterion
    9         | criterion

   10 criterion: "class" '=' "<string>"
   11          | "instance" '=' "<string>"
   12          | "window_role" '=' "<string>"
   13          | "con_id" '=' "<string>"
   14          | "id" '=' "<string>"
   15          | "mark" '=' "<string>"
   16          | "title" '=' "<string>"

   17 operations: operation
   18           | operations ',' operation

   19 operation: exec
   20          | exit
   21          | restart
   22          | reload
   23          | border
   24          | layout
   25          | append_layout
   26          | move
   27          | workspace
   28          | focus
   29          | kill
   30          | open
   31          | fullscreen
   32          | split
   33          | floating
   34          | mark
   35          | resize
   36          | nop
   37          | mode

   38 exec: "exec" optional_no_startup_id "<string>"

   39 optional_no_startup_id: /* empty */
   40                       | "--no-startup-id"

   41 exit: "exit"

   42 reload: "reload"

   43 restart: "restart"

   44 focus: "focus"
   45      | "focus" direction
   46      | "focus" window_mode
   47      | "focus" level

   48 window_mode: "tiling"
   49            | "floating"
   50            | "mode_toggle"

   51 level: "parent"
   52      | "child"

   53 kill: "kill" optional_kill_mode

   54 optional_kill_mode: /* empty */
   55                   | "window"
   56                   | "client"

   57 workspace: "workspace" "next"
   58          | "workspace" "prev"
   59          | "workspace" "back_and_forth"
   60          | "workspace" "<string>"

   61 open: "open"

   62 fullscreen: "fullscreen" fullscreen_mode

   63 fullscreen_mode: /* empty */
   64                | "global"

   65 split: "split" split_direction

   66 split_direction: "horizontal"
   67                | 'h'
   68                | "vertical"
   69                | 'v'

   70 floating: "floating" boolean

   71 boolean: "enable"
   72        | "disable"
   73        | "toggle"

   74 border: "border" border_style

   75 border_style: "normal"
   76             | "none"
   77             | "1pixel"
   78             | "toggle"

   79 move: "move" direction resize_px
   80     | "move" "workspace" "<string>"
   81     | "move" "workspace" "next"
   82     | "move" "workspace" "prev"
   83     | "move" "output" "<string>"

   84 append_layout: "append_layout" "<string>"

   85 layout: "layout" layout_mode

   86 layout_mode: "default"
   87            | "stacked"
   88            | "tabbed"

   89 mark: "mark" "<string>"

   90 nop: "nop" "<string>"

   91 resize: "resize" resize_way direction resize_px resize_tiling

   92 resize_px: /* empty */
   93          | "<number>" "px"

   94 resize_tiling: /* empty */
   95              | "or" "<number>" "ppt"

   96 resize_way: "grow"
   97           | "shrink"

   98 direction: "up"
   99          | "down"
  100          | "left"
  101          | "right"

  102 mode: "mode" "<string>"


Terminals, with rules where they appear

$end (0) 0
',' (44) 18
';' (59) 1
'=' (61) 10 11 12 13 14 15 16
'[' (91) 6
']' (93) 7
'h' (104) 67
'v' (118) 69
error (256)
"exec" (258) 38
"exit" (259) 41
"reload" (260) 42
"restart" (261) 43
"kill" (262) 53
"window" (263) 55
"client" (264) 56
"fullscreen" (265) 62
"global" (266) 64
"layout" (267) 85
"default" (268) 86
"stacked" (269) 87
"tabbed" (270) 88
"border" (271) 74
"normal" (272) 75
"none" (273) 76
"1pixel" (274) 77
"mode" (275) 102
"tiling" (276) 48
"floating" (277) 49 70
"mode_toggle" (278) 50
"enable" (279) 71
"disable" (280) 72
"workspace" (281) 57 58 59 60 80 81 82
"output" (282) 83
"toggle" (283) 73 78
"focus" (284) 44 45 46 47
"move" (285) 79 80 81 82 83
"open" (286) 61
"next" (287) 57 81
"prev" (288) 58 82
"split" (289) 65
"horizontal" (290) 66
"vertical" (291) 68
"up" (292) 98
"down" (293) 99
"left" (294) 100
"right" (295) 101
"parent" (296) 51
"child" (297) 52
"append_layout" (298) 84
"mark" (299) 15 89
"resize" (300) 91
"grow" (301) 96
"shrink" (302) 97
"px" (303) 93
"or" (304) 95
"ppt" (305) 95
"nop" (306) 90
"back_and_forth" (307) 59
"--no-startup-id" (308) 40
"class" (309) 10
"instance" (310) 11
"window_role" (311) 12
"id" (312) 14
"con_id" (313) 13
"title" (314) 16
"<string>" (315) 10 11 12 13 14 15 16 38 60 80 83 84 89 90 102
"<number>" (316) 93 95


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
commands (70)
    on left: 1 2, on right: 0 1
command (71)
    on left: 3, on right: 1 2
match (72)
    on left: 4 5, on right: 3
matchstart (73)
    on left: 6, on right: 5
matchend (74)
    on left: 7, on right: 5
criteria (75)
    on left: 8 9, on right: 5 8
criterion (76)
    on left: 10 11 12 13 14 15 16, on right: 8 9
operations (77)
    on left: 17 18, on right: 3 18
operation (78)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37, on right: 17 18
exec (79)
    on left: 38, on right: 19
optional_no_startup_id (80)
    on left: 39 40, on right: 38
exit (81)
    on left: 41, on right: 20
reload (82)
    on left: 42, on right: 22
restart (83)
    on left: 43, on right: 21
focus (84)
    on left: 44 45 46 47, on right: 28
window_mode (85)
    on left: 48 49 50, on right: 46
level (86)
    on left: 51 52, on right: 47
kill (87)
    on left: 53, on right: 29
optional_kill_mode (88)
    on left: 54 55 56, on right: 53
workspace (89)
    on left: 57 58 59 60, on right: 27
open (90)
    on left: 61, on right: 30
fullscreen (91)
    on left: 62, on right: 31
fullscreen_mode (92)
    on left: 63 64, on right: 62
split (93)
    on left: 65, on right: 32
split_direction (94)
    on left: 66 67 68 69, on right: 65
floating (95)
    on left: 70, on right: 33
boolean (96)
    on left: 71 72 73, on right: 70
border (97)
    on left: 74, on right: 23
border_style (98)
    on left: 75 76 77 78, on right: 74
move (99)
    on left: 79 80 81 82 83, on right: 26
append_layout (100)
    on left: 84, on right: 25
layout (101)
    on left: 85, on right: 24
layout_mode (102)
    on left: 86 87 88, on right: 85
mark (103)
    on left: 89, on right: 34
nop (104)
    on left: 90, on right: 36
resize (105)
    on left: 91, on right: 35
resize_px (106)
    on left: 92 93, on right: 79 91
resize_tiling (107)
    on left: 94 95, on right: 91
resize_way (108)
    on left: 96 97, on right: 91
direction (109)
    on left: 98 99 100 101, on right: 45 79 91
mode (110)
    on left: 102, on right: 37


state 0

    0 $accept: . commands $end

    '['  shift, and go to state 1

    $default  reduce using rule 4 (match)

    commands    go to state 2
    command     go to state 3
    match       go to state 4
    matchstart  go to state 5


state 1

    6 matchstart: '[' .

    $default  reduce using rule 6 (matchstart)


state 2

    0 $accept: commands . $end
    1 commands: commands . ';' command

    $end  shift, and go to state 6
    ';'   shift, and go to state 7


state 3

    2 commands: command .

    $default  reduce using rule 2 (commands)


state 4

    3 command: match . operations

    "exec"           shift, and go to state 8
    "exit"           shift, and go to state 9
    "reload"         shift, and go to state 10
    "restart"        shift, and go to state 11
    "kill"           shift, and go to state 12
    "fullscreen"     shift, and go to state 13
    "layout"         shift, and go to state 14
    "border"         shift, and go to state 15
    "mode"           shift, and go to state 16
    "floating"       shift, and go to state 17
    "workspace"      shift, and go to state 18
    "focus"          shift, and go to state 19
    "move"           shift, and go to state 20
    "open"           shift, and go to state 21
    "split"          shift, and go to state 22
    "append_layout"  shift, and go to state 23
    "mark"           shift, and go to state 24
    "resize"         shift, and go to state 25
    "nop"            shift, and go to state 26

    operations     go to state 27
    operation      go to state 28
    exec           go to state 29
    exit           go to state 30
    reload         go to state 31
    restart        go to state 32
    focus          go to state 33
    kill           go to state 34
    workspace      go to state 35
    open           go to state 36
    fullscreen     go to state 37
    split          go to state 38
    floating       go to state 39
    border         go to state 40
    move           go to state 41
    append_layout  go to state 42
    layout         go to state 43
    mark           go to state 44
    nop            go to state 45
    resize         go to state 46
    mode           go to state 47


state 5

    5 match: matchstart . criteria matchend

    "mark"         shift, and go to state 48
    "class"        shift, and go to state 49
    "instance"     shift, and go to state 50
    "window_role"  shift, and go to state 51
    "id"           shift, and go to state 52
    "con_id"       shift, and go to state 53
    "title"        shift, and go to state 54

    criteria   go to state 55
    criterion  go to state 56


state 6

    0 $accept: commands $end .

    $default  accept


state 7

    1 commands: commands ';' . command

    '['  shift, and go to state 1

    $default  reduce using rule 4 (match)

    command     go to state 57
    match       go to state 4
    matchstart  go to state 5


state 8

   38 exec: "exec" . optional_no_startup_id "<string>"

    "--no-startup-id"  shift, and go to state 58

    $default  reduce using rule 39 (optional_no_startup_id)

    optional_no_startup_id  go to state 59


state 9

   41 exit: "exit" .

    $default  reduce using rule 41 (exit)


state 10

   42 reload: "reload" .

    $default  reduce using rule 42 (reload)


state 11

   43 restart: "restart" .

    $default  reduce using rule 43 (restart)


state 12

   53 kill: "kill" . optional_kill_mode

    "window"  shift, and go to state 60
    "client"  shift, and go to state 61

    $default  reduce using rule 54 (optional_kill_mode)

    optional_kill_mode  go to state 62


state 13

   62 fullscreen: "fullscreen" . fullscreen_mode

    "global"  shift, and go to state 63

    $default  reduce using rule 63 (fullscreen_mode)

    fullscreen_mode  go to state 64


state 14

   85 layout: "layout" . layout_mode

    "default"  shift, and go to state 65
    "stacked"  shift, and go to state 66
    "tabbed"   shift, and go to state 67

    layout_mode  go to state 68


state 15

   74 border: "border" . border_style

    "normal"  shift, and go to state 69
    "none"    shift, and go to state 70
    "1pixel"  shift, and go to state 71
    "toggle"  shift, and go to state 72

    border_style  go to state 73


state 16

  102 mode: "mode" . "<string>"

    "<string>"  shift, and go to state 74


state 17

   70 floating: "floating" . boolean

    "enable"   shift, and go to state 75
    "disable"  shift, and go to state 76
    "toggle"   shift, and go to state 77

    boolean  go to state 78


state 18

   57 workspace: "workspace" . "next"
   58          | "workspace" . "prev"
   59          | "workspace" . "back_and_forth"
   60          | "workspace" . "<string>"

    "next"            shift, and go to state 79
    "prev"            shift, and go to state 80
    "back_and_forth"  shift, and go to state 81
    "<string>"        shift, and go to state 82


state 19

   44 focus: "focus" .
   45      | "focus" . direction
   46      | "focus" . window_mode
   47      | "focus" . level

    "tiling"       shift, and go to state 83
    "floating"     shift, and go to state 84
    "mode_toggle"  shift, and go to state 85
    "up"           shift, and go to state 86
    "down"         shift, and go to state 87
    "left"         shift, and go to state 88
    "right"        shift, and go to state 89
    "parent"       shift, and go to state 90
    "child"        shift, and go to state 91

    $default  reduce using rule 44 (focus)

    window_mode  go to state 92
    level        go to state 93
    direction    go to state 94


state 20

   79 move: "move" . direction resize_px
   80     | "move" . "workspace" "<string>"
   81     | "move" . "workspace" "next"
   82     | "move" . "workspace" "prev"
   83     | "move" . "output" "<string>"

    "workspace"  shift, and go to state 95
    "output"     shift, and go to state 96
    "up"         shift, and go to state 86
    "down"       shift, and go to state 87
    "left"       shift, and go to state 88
    "right"      shift, and go to state 89

    direction  go to state 97


state 21

   61 open: "open" .

    $default  reduce using rule 61 (open)


state 22

   65 split: "split" . split_direction

    "horizontal"  shift, and go to state 98
    "vertical"    shift, and go to state 99
    'h'           shift, and go to state 100
    'v'           shift, and go to state 101

    split_direction  go to state 102


state 23

   84 append_layout: "append_layout" . "<string>"

    "<string>"  shift, and go to state 103


state 24

   89 mark: "mark" . "<string>"

    "<string>"  shift, and go to state 104


state 25

   91 resize: "resize" . resize_way direction resize_px resize_tiling

    "grow"    shift, and go to state 105
    "shrink"  shift, and go to state 106

    resize_way  go to state 107


state 26

   90 nop: "nop" . "<string>"

    "<string>"  shift, and go to state 108


state 27

    3 command: match operations .
   18 operations: operations . ',' operation

    ','  shift, and go to state 109

    $default  reduce using rule 3 (command)


state 28

   17 operations: operation .

    $default  reduce using rule 17 (operations)


state 29

   19 operation: exec .

    $default  reduce using rule 19 (operation)


state 30

   20 operation: exit .

    $default  reduce using rule 20 (operation)


state 31

   22 operation: reload .

    $default  reduce using rule 22 (operation)


state 32

   21 operation: restart .

    $default  reduce using rule 21 (operation)


state 33

   28 operation: focus .

    $default  reduce using rule 28 (operation)


state 34

   29 operation: kill .

    $default  reduce using rule 29 (operation)


state 35

   27 operation: workspace .

    $default  reduce using rule 27 (operation)


state 36

   30 operation: open .

    $default  reduce using rule 30 (operation)


state 37

   31 operation: fullscreen .

    $default  reduce using rule 31 (operation)


state 38

   32 operation: split .

    $default  reduce using rule 32 (operation)


state 39

   33 operation: floating .

    $default  reduce using rule 33 (operation)


state 40

   23 operation: border .

    $default  reduce using rule 23 (operation)


state 41

   26 operation: move .

    $default  reduce using rule 26 (operation)


state 42

   25 operation: append_layout .

    $default  reduce using rule 25 (operation)


state 43

   24 operation: layout .

    $default  reduce using rule 24 (operation)


state 44

   34 operation: mark .

    $default  reduce using rule 34 (operation)


state 45

   36 operation: nop .

    $default  reduce using rule 36 (operation)


state 46

   35 operation: resize .

    $default  reduce using rule 35 (operation)


state 47

   37 operation: mode .

    $default  reduce using rule 37 (operation)


state 48

   15 criterion: "mark" . '=' "<string>"

    '='  shift, and go to state 110


state 49

   10 criterion: "class" . '=' "<string>"

    '='  shift, and go to state 111


state 50

   11 criterion: "instance" . '=' "<string>"

    '='  shift, and go to state 112


state 51

   12 criterion: "window_role" . '=' "<string>"

    '='  shift, and go to state 113


state 52

   14 criterion: "id" . '=' "<string>"

    '='  shift, and go to state 114


state 53

   13 criterion: "con_id" . '=' "<string>"

    '='  shift, and go to state 115


state 54

   16 criterion: "title" . '=' "<string>"

    '='  shift, and go to state 116


state 55

    5 match: matchstart criteria . matchend
    8 criteria: criteria . criterion

    "mark"         shift, and go to state 48
    "class"        shift, and go to state 49
    "instance"     shift, and go to state 50
    "window_role"  shift, and go to state 51
    "id"           shift, and go to state 52
    "con_id"       shift, and go to state 53
    "title"        shift, and go to state 54
    ']'            shift, and go to state 117

    matchend   go to state 118
    criterion  go to state 119


state 56

    9 criteria: criterion .

    $default  reduce using rule 9 (criteria)


state 57

    1 commands: commands ';' command .

    $default  reduce using rule 1 (commands)


state 58

   40 optional_no_startup_id: "--no-startup-id" .

    $default  reduce using rule 40 (optional_no_startup_id)


state 59

   38 exec: "exec" optional_no_startup_id . "<string>"

    "<string>"  shift, and go to state 120


state 60

   55 optional_kill_mode: "window" .

    $default  reduce using rule 55 (optional_kill_mode)


state 61

   56 optional_kill_mode: "client" .

    $default  reduce using rule 56 (optional_kill_mode)


state 62

   53 kill: "kill" optional_kill_mode .

    $default  reduce using rule 53 (kill)


state 63

   64 fullscreen_mode: "global" .

    $default  reduce using rule 64 (fullscreen_mode)


state 64

   62 fullscreen: "fullscreen" fullscreen_mode .

    $default  reduce using rule 62 (fullscreen)


state 65

   86 layout_mode: "default" .

    $default  reduce using rule 86 (layout_mode)


state 66

   87 layout_mode: "stacked" .

    $default  reduce using rule 87 (layout_mode)


state 67

   88 layout_mode: "tabbed" .

    $default  reduce using rule 88 (layout_mode)


state 68

   85 layout: "layout" layout_mode .

    $default  reduce using rule 85 (layout)


state 69

   75 border_style: "normal" .

    $default  reduce using rule 75 (border_style)


state 70

   76 border_style: "none" .

    $default  reduce using rule 76 (border_style)


state 71

   77 border_style: "1pixel" .

    $default  reduce using rule 77 (border_style)


state 72

   78 border_style: "toggle" .

    $default  reduce using rule 78 (border_style)


state 73

   74 border: "border" border_style .

    $default  reduce using rule 74 (border)


state 74

  102 mode: "mode" "<string>" .

    $default  reduce using rule 102 (mode)


state 75

   71 boolean: "enable" .

    $default  reduce using rule 71 (boolean)


state 76

   72 boolean: "disable" .

    $default  reduce using rule 72 (boolean)


state 77

   73 boolean: "toggle" .

    $default  reduce using rule 73 (boolean)


state 78

   70 floating: "floating" boolean .

    $default  reduce using rule 70 (floating)


state 79

   57 workspace: "workspace" "next" .

    $default  reduce using rule 57 (workspace)


state 80

   58 workspace: "workspace" "prev" .

    $default  reduce using rule 58 (workspace)


state 81

   59 workspace: "workspace" "back_and_forth" .

    $default  reduce using rule 59 (workspace)


state 82

   60 workspace: "workspace" "<string>" .

    $default  reduce using rule 60 (workspace)


state 83

   48 window_mode: "tiling" .

    $default  reduce using rule 48 (window_mode)


state 84

   49 window_mode: "floating" .

    $default  reduce using rule 49 (window_mode)


state 85

   50 window_mode: "mode_toggle" .

    $default  reduce using rule 50 (window_mode)


state 86

   98 direction: "up" .

    $default  reduce using rule 98 (direction)


state 87

   99 direction: "down" .

    $default  reduce using rule 99 (direction)


state 88

  100 direction: "left" .

    $default  reduce using rule 100 (direction)


state 89

  101 direction: "right" .

    $default  reduce using rule 101 (direction)


state 90

   51 level: "parent" .

    $default  reduce using rule 51 (level)


state 91

   52 level: "child" .

    $default  reduce using rule 52 (level)


state 92

   46 focus: "focus" window_mode .

    $default  reduce using rule 46 (focus)


state 93

   47 focus: "focus" level .

    $default  reduce using rule 47 (focus)


state 94

   45 focus: "focus" direction .

    $default  reduce using rule 45 (focus)


state 95

   80 move: "move" "workspace" . "<string>"
   81     | "move" "workspace" . "next"
   82     | "move" "workspace" . "prev"

    "next"      shift, and go to state 121
    "prev"      shift, and go to state 122
    "<string>"  shift, and go to state 123


state 96

   83 move: "move" "output" . "<string>"

    "<string>"  shift, and go to state 124


state 97

   79 move: "move" direction . resize_px

    "<number>"  shift, and go to state 125

    $default  reduce using rule 92 (resize_px)

    resize_px  go to state 126


state 98

   66 split_direction: "horizontal" .

    $default  reduce using rule 66 (split_direction)


state 99

   68 split_direction: "vertical" .

    $default  reduce using rule 68 (split_direction)


state 100

   67 split_direction: 'h' .

    $default  reduce using rule 67 (split_direction)


state 101

   69 split_direction: 'v' .

    $default  reduce using rule 69 (split_direction)


state 102

   65 split: "split" split_direction .

    $default  reduce using rule 65 (split)


state 103

   84 append_layout: "append_layout" "<string>" .

    $default  reduce using rule 84 (append_layout)


state 104

   89 mark: "mark" "<string>" .

    $default  reduce using rule 89 (mark)


state 105

   96 resize_way: "grow" .

    $default  reduce using rule 96 (resize_way)


state 106

   97 resize_way: "shrink" .

    $default  reduce using rule 97 (resize_way)


state 107

   91 resize: "resize" resize_way . direction resize_px resize_tiling

    "up"     shift, and go to state 86
    "down"   shift, and go to state 87
    "left"   shift, and go to state 88
    "right"  shift, and go to state 89

    direction  go to state 127


state 108

   90 nop: "nop" "<string>" .

    $default  reduce using rule 90 (nop)


state 109

   18 operations: operations ',' . operation

    "exec"           shift, and go to state 8
    "exit"           shift, and go to state 9
    "reload"         shift, and go to state 10
    "restart"        shift, and go to state 11
    "kill"           shift, and go to state 12
    "fullscreen"     shift, and go to state 13
    "layout"         shift, and go to state 14
    "border"         shift, and go to state 15
    "mode"           shift, and go to state 16
    "floating"       shift, and go to state 17
    "workspace"      shift, and go to state 18
    "focus"          shift, and go to state 19
    "move"           shift, and go to state 20
    "open"           shift, and go to state 21
    "split"          shift, and go to state 22
    "append_layout"  shift, and go to state 23
    "mark"           shift, and go to state 24
    "resize"         shift, and go to state 25
    "nop"            shift, and go to state 26

    operation      go to state 128
    exec           go to state 29
    exit           go to state 30
    reload         go to state 31
    restart        go to state 32
    focus          go to state 33
    kill           go to state 34
    workspace      go to state 35
    open           go to state 36
    fullscreen     go to state 37
    split          go to state 38
    floating       go to state 39
    border         go to state 40
    move           go to state 41
    append_layout  go to state 42
    layout         go to state 43
    mark           go to state 44
    nop            go to state 45
    resize         go to state 46
    mode           go to state 47


state 110

   15 criterion: "mark" '=' . "<string>"

    "<string>"  shift, and go to state 129


state 111

   10 criterion: "class" '=' . "<string>"

    "<string>"  shift, and go to state 130


state 112

   11 criterion: "instance" '=' . "<string>"

    "<string>"  shift, and go to state 131


state 113

   12 criterion: "window_role" '=' . "<string>"

    "<string>"  shift, and go to state 132


state 114

   14 criterion: "id" '=' . "<string>"

    "<string>"  shift, and go to state 133


state 115

   13 criterion: "con_id" '=' . "<string>"

    "<string>"  shift, and go to state 134


state 116

   16 criterion: "title" '=' . "<string>"

    "<string>"  shift, and go to state 135


state 117

    7 matchend: ']' .

    $default  reduce using rule 7 (matchend)


state 118

    5 match: matchstart criteria matchend .

    $default  reduce using rule 5 (match)


state 119

    8 criteria: criteria criterion .

    $default  reduce using rule 8 (criteria)


state 120

   38 exec: "exec" optional_no_startup_id "<string>" .

    $default  reduce using rule 38 (exec)


state 121

   81 move: "move" "workspace" "next" .

    $default  reduce using rule 81 (move)


state 122

   82 move: "move" "workspace" "prev" .

    $default  reduce using rule 82 (move)


state 123

   80 move: "move" "workspace" "<string>" .

    $default  reduce using rule 80 (move)


state 124

   83 move: "move" "output" "<string>" .

    $default  reduce using rule 83 (move)


state 125

   93 resize_px: "<number>" . "px"

    "px"  shift, and go to state 136


state 126

   79 move: "move" direction resize_px .

    $default  reduce using rule 79 (move)


state 127

   91 resize: "resize" resize_way direction . resize_px resize_tiling

    "<number>"  shift, and go to state 125

    $default  reduce using rule 92 (resize_px)

    resize_px  go to state 137


state 128

   18 operations: operations ',' operation .

    $default  reduce using rule 18 (operations)


state 129

   15 criterion: "mark" '=' "<string>" .

    $default  reduce using rule 15 (criterion)


state 130

   10 criterion: "class" '=' "<string>" .

    $default  reduce using rule 10 (criterion)


state 131

   11 criterion: "instance" '=' "<string>" .

    $default  reduce using rule 11 (criterion)


state 132

   12 criterion: "window_role" '=' "<string>" .

    $default  reduce using rule 12 (criterion)


state 133

   14 criterion: "id" '=' "<string>" .

    $default  reduce using rule 14 (criterion)


state 134

   13 criterion: "con_id" '=' "<string>" .

    $default  reduce using rule 13 (criterion)


state 135

   16 criterion: "title" '=' "<string>" .

    $default  reduce using rule 16 (criterion)


state 136

   93 resize_px: "<number>" "px" .

    $default  reduce using rule 93 (resize_px)


state 137

   91 resize: "resize" resize_way direction resize_px . resize_tiling

    "or"  shift, and go to state 138

    $default  reduce using rule 94 (resize_tiling)

    resize_tiling  go to state 139


state 138

   95 resize_tiling: "or" . "<number>" "ppt"

    "<number>"  shift, and go to state 140


state 139

   91 resize: "resize" resize_way direction resize_px resize_tiling .

    $default  reduce using rule 91 (resize)


state 140

   95 resize_tiling: "or" "<number>" . "ppt"

    "ppt"  shift, and go to state 141


state 141

   95 resize_tiling: "or" "<number>" "ppt" .

    $default  reduce using rule 95 (resize_tiling)
